re PR c++/49418 (G++ discards cv-quals from template parameter types)

PR c++/49418
	* call.c (cxx_type_promotes_to): Don't strip cv-quals.
	* semantics.c (lambda_return_type): Strip them here.

From-SVN: r175271