gcc/testsuite/g++.dg/template/param3.C
@@ -1,0 +1,12 @@
+// PR c++/49418
+
+template <class T>
+void f (const T t)
+{
+  t = 1;			// { dg-error "" }
+}
+
+int main()
+{
+  f(1);
+}
